data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1583.wast
;; 4. **Test Description**:     - Create a loop where a `br_if` is executed with the condition derived from computations and checks against results type.    - **Constraint Checking**: Validates correct computation and evaluation within the loop stack state, confirming operand handling.    - **Infinite Loop Relation**: Prevents scenarios where the condition always evaluates incorrectly, causing infinite loops due to improper evaluation and stack handling.

(assert_invalid
 (module
  (func $loop-br_if-computation-check
   (loop (result i32)
    (i32.const 5)
    (i32.const 3)
    (i32.add)
    (br_if 0 (i32.const 1))
   )
  )
 )
 "type mismatch"
)